@@ -72,6 +72,9 @@ http_generator_factory=rabbit.proxy.StandardHttpGeneratorFactory
 # but then you have to see the configuration for the factory below as well
 #http_generator_factory=rabbit.proxy.FileTemplateHttpGeneratorFactory
 
+# Set this to true if you want to enable TCP_NODELAY
+#use_tcp_no_delay=true
+
 
 [logging]
 # RabbIT uses standard java.util.logging to log things, you 
